--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <!-- <link rel="stylesheet" href="dist/main.css"> -->
 </head>
 <body>
-  <h1>Webpack</h1>
+  <h1>Webpack!!!</h1>
   <!-- <script src="dist/main.js"></script> -->
 </body>
 </html>
