html reload is working

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WebPack</title>
-  <!-- <link rel="stylesheet" href="dist/main.css"> -->
 </head>
 <body>
   <h1>Webpack!!!</h1>
-  <!-- <script src="dist/main.js"></script> -->
+  <img src="img/10211953.jpg" alt="">
 </body>
 </html>
